--- a/vignettes/case-study-gtcars.Rmd
+++ b/vignettes/case-study-gtcars.Rmd
@@ -79,7 +79,7 @@ gtcars_8 |>
 We could also use factor levels to get a more particular ordering within `arrange()`. For example, we can first arrange the groups themselves (the country of origin--`ctry_origin`) by our own preferred ordering and then arrange by `mfr` and descending `msrp` as before. Then, `group_by(ctry_origin)` can be used on the sorted tibble before passing this to `gt()`.
 
 ```{r factor_gtcars}
-# Define our preferred order `ctry_origin`
+# Define our preferred order for `ctry_origin`
 order_countries <- c("Germany", "Italy", "United States", "Japan")
 
 # Reorder the table rows by our specific ordering of groups
@@ -100,7 +100,7 @@ tab <-
   arrange(
     factor(ctry_origin, levels = order_countries),
     mfr, desc(msrp)
-    ) |>
+  ) |>
   mutate(car = paste(mfr, model)) |>
   select(-mfr, -model) |>
   group_by(ctry_origin) |>
@@ -160,6 +160,8 @@ Sometimes we'd like to combine the data from two columns into a single column. T
 
 The `cols_merge()` function uses a `col_1` column and a `col_2` column. Once combined, the `col_1` column will be retained and the `col_2` column will be dropped. The pattern argument uses `{1}` and `{2}` to represent the content of `col_1` and `col_2`. Here, we can use string literals to add text like `rpm` or the `@` sign. Furthermore, because we are targeting an HTML table, we can use the `<br>` tag to insert a linebreak.
 
+We are going to do something a little special with the `pattern` for the `mpg_c` and `mpg_h` columns and wrap it all with `<<`/`>>`. This is special pattern syntax that tells **gt** to remove anything inside those double braces when there is an `NA` value. We find that is a single row that has `NA` in both columns (for the 'Tesla Model S') and rather than seeing `"NA"` appear in the table, it's better to remove that entry entirely with this specialized pattern syntax.  
+
 Labeling columns essentially means that we are choosing display-friendly labels that are no longer simply the column names (the default label). The `cols_label()` function makes this relabeling possible. It accepts a series of named arguments in the form of `<column_name> = <column_label>, ...`.
 
 ```{r merge_columns_pattern}
@@ -170,8 +172,8 @@ tab <-
   tab |>
   cols_merge(
     columns = c(mpg_c, mpg_h),
-    pattern = "{1}c<br>{2}h"
-    ) |>
+    pattern = "<<{1}c<br>{2}h>>"
+  ) |>
   cols_merge(
     columns = c(hp, hp_rpm),
     pattern = "{1}<br>@{2}rpm"
@@ -203,11 +205,7 @@ There are a number of formatter functions, all with the general naming conventio
 # with no display of the currency subunits
 tab <- 
   tab |>
-  fmt_currency(
-    columns = msrp,
-    currency = "USD",
-    decimals = 0
-  )
+  fmt_currency(columns = msrp, decimals = 0)
 
 # Show the table
 tab
@@ -217,12 +215,13 @@ tab
 
 We can change the alignment of data in columns with `cols_align()`. For our table, let's center-align the `mpg_c`, `hp`, and `trq` columns. All other columns will maintain their default alignments.
 
-It's sometimes useful to modify the default styles of table cells. We can do this in a targeted way with the `tab_style()` function. That function require two key pieces of information: a `style` definition, and one or more `locations` (which cells should the styles be applied to?). The `style` argument commonly uses the `cells_styles()` helper function, which contains arguments for all the styles that are supported (use `?cells_styles` for more information on this). Here we will use a text size of `12px` in our targeted cells---both `px(12)` and `"12px"` work equally well here. We also use helper functions with the `locations` argument and these are the `cells_*()` functions. We would like to target the data cells in all columns except `year` and `msrp` so we need to use `cells_body` and then supply our target columns to the `columns` argument.
+It's sometimes useful to modify the default styles of table cells. We can do this in a targeted way with the `tab_style()` function. That function require two key pieces of information: a `style` definition, and one or more `locations` (which cells should the styles be applied to?). The `style` argument commonly uses the `cell_*()` helper functions. There are three of these (`cell_text()`, `cell_fill()` and `cell_borders()`) and each contains different arguments for the different styles that are supported.
+
+Here we will use the `cell_text()` helper function and specify a text `size` of `"12px"` for our targeted cells---both `px(12)` and `"12px"` work equally well here. We also use helper functions with the `locations` argument and these are the `cells_*()` functions. We would like to target the data cells in all columns except `year` and `msrp` so we need to use `cells_body` and then supply our target columns to its own `columns` argument.
 
 ```{r align_style}
-# Center-align three columns in the gt table
-# and modify the text size of a few columns
-# of data
+# Center-align three columns in the gt table and
+# modify the text size of a few columns of data
 tab <- 
   tab |>
   cols_align(
@@ -242,7 +241,7 @@ tab
 
 ### Text Transforms
 
-A text transform via the `text_transform()` function is a great way to further manipulate text in data cells (even after they've been formatted with the `fmt*()` function). After targeting data cells with the `cells_body()` location helper function, we supply a function to the `fn` argument that processes a vector of text. If we intend to render as an HTML table, we can directly apply HTML tags in the transformation function. The function we provide here will build strings that read better in a display table.
+A text transform via the `text_transform()` function is a great way to further manipulate text in data cells (even after they've been formatted with the `fmt*()` function). After targeting data cells with the `cells_body()` location helper function, we supply a function to the `fn` argument that processes a vector of text (the vector `x` will be the formatted text in each of the targeted cells). If we intend to render an HTML table, we can directly apply HTML tags in the transformation function. The function we provide here is a bit complicated but it will build strings in the `trsmn` column that read better in a display table.
 
 ```{r text_transform_html}
 # Transform the column of text in `trsmn` using
@@ -325,9 +324,9 @@ Let's bring it all together by putting together all the statements we developed 
     b. identifying the car with the highest horsepower
     c. stating the currency of the MSRP
 
-The `tab_footnote()` function expects note text for the `footnote` argument, and locations for where the footnote mark should be attached. It will handle the placement of the footnote mark and also place the footnote in the footnotes area. Here, we'll use the `cells_body()` *location helper* function. There are several location helper functions for targeting all parts of the table (e.g,. `cells_body()`, `cells_stub()`, etc.). Each *location helper* has their own interface for targeting cells so refer to the documentation for examples of how they work in practice.
+The `tab_footnote()` function expects note text for the `footnote` argument, and locations for where the footnote mark should be attached. It will handle the placement of the footnote mark and also place the footnote in the footnotes area. Here, we'll use the `cells_body()` *location helper* function. There are several location helper functions for targeting all parts of the table (e.g,. `cells_body()`, `cells_stub()`, etc.). Each *location helper* has its own interface for targeting cells so refer to the documentation for examples of how they work in practice (e.g., use `?cells_body`).
 
-What `cells_body()` expects is `columns` (column names, which can be conveniently provided in `c()`) and `rows` (which can be a vector of row names or row indices). The `cells_stub()` location helper only expects a vector of `rows`. For `cells_column_labels()`, we can either provided targeted column labels in the `columns` argument or spanner column labels in the `groups` argument. Here, we are targeting a footnote to the `msrp` column label so we will use `columns = msrp`.
+What `cells_body()` expects is `columns` (column names, which can be conveniently provided in `c()`) and `rows` (which can be a vector of row names or row indices). The `cells_stub()` location helper only expects a vector of `rows`. For `cells_column_labels()`, we provide column labels in its `columns` argument. Here, we are targeting a footnote to the `msrp` column label so we will use `columns = msrp`.
 
 In terms of structuring the code, we're taking all the previous statements and putting those in first. It should be noted that the order of the statements does not matter to the end result, we could also put in all of the `tab_footnote()` statements first (again, any in order) and expect the same output table.
 
@@ -349,6 +348,9 @@ highest_horsepower <-
   slice(1) |>
   mutate(car = paste(mfr, model)) |>
   pull(car)
+
+# Define our preferred order for `ctry_origin`
+order_countries <- c("Germany", "Italy", "United States", "Japan")
 
 # Create a display table with `gtcars`, using all of the previous
 # statements piped together + additional `tab_footnote()` stmts
@@ -373,7 +375,7 @@ tab <-
   ) |>
   cols_merge(
     columns = c(mpg_c, mpg_h),
-    pattern = "{1}c<br>{2}h"
+    pattern = "<<{1}c<br>{2}h>>"
   ) |>
   cols_merge(
     columns = c(hp, hp_rpm),
@@ -392,11 +394,7 @@ tab <-
     trsmn = "Transmission",
     msrp = "MSRP"
   ) |>
-  fmt_currency(
-    columns = msrp,
-    currency = "USD",
-    decimals = 0
-  ) |>
+  fmt_currency(columns = msrp, decimals = 0) |>
   cols_align(
     align = "center",
     columns = c(mpg_c, hp, trq)
@@ -430,7 +428,8 @@ tab <-
   ) |>
   tab_source_note(
     source_note = md(
-      "Source: Various pages within the Edmonds website.")
+      "Source: Various pages within the Edmonds website."
+    )
   ) |>
   tab_footnote(
     footnote = md("Best gas mileage (city) of all the **gtcars**."),
