--- a/tests/gt-examples/03-latex/latex-13-adding_footnotes.Rmd
+++ b/tests/gt-examples/03-latex/latex-13-adding_footnotes.Rmd
@@ -35,7 +35,7 @@ gt(
   data = tbl,
   groupname_col = "date"
 ) %>%
-  #tab_header(title = "The Table Title", subtitle = "The subtitle.") %>%
+  tab_header(title = "The Table Title", subtitle = "The subtitle.") %>%
   tab_spanner(
     label = "values",
     columns = starts_with("value")
