--- a/tests/gt-examples/03-latex/latex-13-adding_footnotes.Rmd
+++ b/tests/gt-examples/03-latex/latex-13-adding_footnotes.Rmd
@@ -76,5 +76,5 @@ gt(
     footnote = md("The `subtitle` can likewise get a footnote."),
     locations = cells_title(groups = "subtitle")
   ) %>%
-  tab_options(latex.use.longtable = TRUE)
+  tab_options(latex.use_longtable = TRUE)
 ```
