--- a/vignettes/case-study-gtcars.Rmd
+++ b/vignettes/case-study-gtcars.Rmd
@@ -341,7 +341,7 @@ best_gas_mileage_city <-
   pull(car)
 
 # Use dplyr functions to get the car with the highest horsepower
-# this will be used to target the correct celgl for a footnote
+# this will be used to target the correct cell for a footnote
 highest_horsepower <- 
   gtcars |> 
   arrange(desc(hp)) |>
