--- a/vignettes/gt-visual.qmd
+++ b/vignettes/gt-visual.qmd
@@ -1,17 +1,24 @@
 ---
-title: "code"
+title: "gt visual tests"
 format: html
 editor: source
+description: >
+  Visual tests between grid, interactive, LaTeX, and html output.
 code-link: true
 toc: true
 html-table-processing: none
+code-fold: true
 ---
+
 
 ```{r}
 #| label: setup
 #| output: false
 #| include: false
 
+# You can use this to add more tests.
+# Run source("scripts/visual-tests-latex.R") to update the LaTeX tests as needed.
+# Locally, you can use render to get the tabset view.
 if (isTRUE(as.logical(Sys.getenv("CI", "false"))) || identical(Sys.getenv("IN_PKGDOWN"), "true")
 ) {
   library(gt)
@@ -21,7 +28,6 @@ if (isTRUE(as.logical(Sys.getenv("CI", "false"))) || identical(Sys.getenv("IN_PK
 }
 # All tables are generated in vignettes/visual_tests.R
 # When updating this file, update also pkgdown/assets/gt-latex.qmd
-knitr::read_chunk("visual_tests.R")
 ```
 
 ```{r}
@@ -35,6 +41,14 @@ You can find [visual tests for LaTeX](https://gt.rstudio.com/gt-latex.pdf)
 
 ```{r}
 #| label: background-color
+tab <- exibble |>
+  gt() |>
+  tab_options(
+    column_labels.background.color = "gray"
+  ) |>
+  tab_spanner(c(num, char), label = "A spanner") |>
+  tab_header(title = "background color")
+
 ```
 
 ::: panel-tabset
@@ -64,6 +78,47 @@ plot(tab)
 
 ```{r}
 #| label: complete-output
+tab <- pizzaplace %>%
+  dplyr::filter(type %in% c("classic", "veggie")) %>%
+  dplyr::group_by(type, size) %>%
+  dplyr::summarize(
+    sold = dplyr::n(),
+    income = sum(price),
+    .groups = "drop"
+  ) %>%
+  gt(rowname_col = "size", groupname_col = "type") %>%
+  tab_header(title = "Complete output") %>%
+  fmt_integer(columns = sold) %>%
+  fmt_currency(columns = income) %>%
+  summary_rows(
+    fns = list(label = "All Sizes", fn = "sum"),
+    side = c("top"),
+    fmt = list(
+      ~ fmt_integer(., columns = sold),
+      ~ fmt_currency(., columns = income)
+    )
+  ) %>%
+  tab_options(
+    summary_row.background.color = "gray95",
+    row_group.as_column = TRUE
+  ) %>%
+  tab_stub_indent(
+    rows = everything(),
+    indent = 2
+  ) %>%
+  grand_summary_rows(
+    columns = c("sold", "income"),
+    fns = list(Sum ~ sum(.)),
+    fmt = ~ fmt_number(.)
+  ) %>%
+  tab_caption("Here be caption text") %>%
+  tab_spanner(
+    label = "Spanner",
+    columns = c("sold", "income")
+  ) %>%
+  tab_stubhead("Stubhead label") %>%
+  tab_source_note("Source: the pizzaria") %>%
+  tab_footnote("Pineapples not included")
 ```
 
 ::: panel-tabset
@@ -88,3 +143,129 @@ opt_interactive(tab)
 plot(tab)
 ```
 :::
+
+## Math rendering {#sec-math-rendering}
+
+```{r}
+#| label: complete-output
+tab <- data.frame(
+  idx = 1:37,
+  l_time_domain = 
+    c(
+      "$1$",
+      "${{\\bf{e}}^{a\\,t}}$",
+      "${t^n},\\,\\,\\,\\,\\,n = 1,2,3, \\ldots$",
+      "${t^p}, p > -1$",
+      "$\\sqrt t$",
+      "${t^{n - \\frac{1}{2}}},\\,\\,\\,\\,\\,n = 1,2,3, \\ldots$",
+      "$\\sin \\left( {at} \\right)$",
+      "$\\cos \\left( {at} \\right)$",
+      "$t\\sin \\left( {at} \\right)$",
+      "$t\\cos \\left( {at} \\right)$",
+      "$\\sin \\left( {at} \\right) - at\\cos \\left( {at} \\right)$",
+      "$\\sin \\left( {at} \\right) + at\\cos \\left( {at} \\right)$",
+      "$\\cos \\left( {at} \\right) - at\\sin \\left( {at} \\right)$",
+      "$\\cos \\left( {at} \\right) + at\\sin \\left( {at} \\right)$",
+      "$\\sin \\left( {at + b} \\right)$",
+      "$\\cos \\left( {at + b} \\right)$",
+      "$\\sinh \\left( {at} \\right)$",
+      "$\\cosh \\left( {at} \\right)$",
+      "${{\\bf{e}}^{at}}\\sin \\left( {bt} \\right)$",
+      "${{\\bf{e}}^{at}}\\cos \\left( {bt} \\right)$",
+      "${{\\bf{e}}^{at}}\\sinh \\left( {bt} \\right)$",
+      "${{\\bf{e}}^{at}}\\cosh \\left( {bt} \\right)$",
+      "${t^n}{{\\bf{e}}^{at}},\\,\\,\\,\\,\\,n = 1,2,3, \\ldots$",
+      "$f\\left( {ct} \\right)$",
+      "${u_c}\\left( t \\right) = u\\left( {t - c} \\right)$",
+      "$\\delta \\left( {t - c} \\right)$",
+      "${u_c}\\left( t \\right)f\\left( {t - c} \\right)$",
+      "${u_c}\\left( t \\right)g\\left( t \\right)$",
+      "${{\\bf{e}}^{ct}}f\\left( t \\right)$",
+      "${t^n}f\\left( t \\right),\\,\\,\\,\\,\\,n = 1,2,3, \\ldots$",
+      "$\\displaystyle \\frac{1}{t}f\\left( t \\right)$",
+      "$\\displaystyle \\int_{{\\,0}}^{{\\,t}}{{\\,f\\left( v \\right)\\,dv}}$",
+      "$\\displaystyle \\int_{{\\,0}}^{{\\,t}}{{f\\left( {t - \\tau } \\right)g\\left( \\tau  \\right)\\,d\\tau }}$",
+      "$f\\left( {t + T} \\right) = f\\left( t \\right)$",
+      "$f'\\left( t \\right)$",
+      "$f''\\left( t \\right)$",
+      "${f^{\\left( n \\right)}}\\left( t \\right)$"
+    ),
+  l_laplace_s_domain =
+    c(
+      "$$\\frac{1}{s}$$",
+      "$$\\frac{1}{{s - a}}$$",
+      "$$\\frac{{n!}}{{{s^{n + 1}}}}$$",
+      "$$\\frac{{\\Gamma \\left( {p + 1} \\right)}}{{{s^{p + 1}}}}$$",
+      "$$\\frac{{\\sqrt \\pi }}{{2{s^{\\frac{3}{2}}}}}$$",
+      "$$\\frac{{1 \\cdot 3 \\cdot 5 \\cdots \\left( {2n - 1} \\right)\\sqrt \\pi }}{{{2^n}{s^{n + \\frac{1}{2}}}}}$$",
+      "$$\\frac{a}{{{s^2} + {a^2}}}$$",
+      "$$\\frac{s}{{{s^2} + {a^2}}}$$",
+      "$$\\frac{{2as}}{{{{\\left( {{s^2} + {a^2}} \\right)}^2}}}$$",
+      "$$\\frac{{{s^2} - {a^2}}}{{{{\\left( {{s^2} + {a^2}} \\right)}^2}}}$$",
+      "$$\\frac{{2{a^3}}}{{{{\\left( {{s^2} + {a^2}} \\right)}^2}}}$$",
+      "$$\\frac{{2a{s^2}}}{{{{\\left( {{s^2} + {a^2}} \\right)}^2}}}$$",
+      "$$\\frac{{s\\left( {{s^2} - {a^2}} \\right)}}{{{{\\left( {{s^2} + {a^2}} \\right)}^2}}}$$",
+      "$$\\frac{{s\\left( {{s^2} + 3{a^2}} \\right)}}{{{{\\left( {{s^2} + {a^2}} \\right)}^2}}}$$",
+      "$$\\frac{{s\\sin \\left( b \\right) + a\\cos \\left( b \\right)}}{{{s^2} + {a^2}}}$$",
+      "$$\\frac{{s\\cos \\left( b \\right) - a\\sin \\left( b \\right)}}{{{s^2} + {a^2}}}$$",
+      "$$\\frac{a}{{{s^2} - {a^2}}}$$",
+      "$$\\frac{s}{{{s^2} - {a^2}}}$$",
+      "$$\\frac{b}{{{{\\left( {s - a} \\right)}^2} + {b^2}}}$$",
+      "$$\\frac{{s - a}}{{{{\\left( {s - a} \\right)}^2} + {b^2}}}$$",
+      "$$\\frac{b}{{{{\\left( {s - a} \\right)}^2} - {b^2}}}$$",
+      "$$\\frac{{s - a}}{{{{\\left( {s - a} \\right)}^2} - {b^2}}}$$",
+      "$$\\frac{{n!}}{{{{\\left( {s - a} \\right)}^{n + 1}}}}$$",
+      "$$\\frac{1}{c}F\\left( {\\frac{s}{c}} \\right)$$",
+      "$$\\frac{{{{\\bf{e}}^{ - cs}}}}{s}$$",
+      "${{\\bf{e}}^{ - cs}}$",
+      "${{\\bf{e}}^{ - cs}}F\\left( s \\right)$",
+      "${{\\bf{e}}^{ - cs}}{\\mathcal{L}}\\left\\{ {g\\left( {t + c} \\right)} \\right\\}$",
+      "$F\\left( {s - c} \\right)$",
+      "${\\left( { - 1} \\right)^n}{F^{\\left( n \\right)}}\\left( s \\right)$",
+      "$\\int_{{\\,s}}^{{\\,\\infty }}{{F\\left( u \\right)\\,du}}$",
+      "$\\displaystyle \\frac{{F\\left( s \\right)}}{s}$",
+      "$F\\left( s \\right)G\\left( s \\right)$",
+      "$\\displaystyle \\frac{{\\displaystyle \\int_{{\\,0}}^{{\\,T}}{{{{\\bf{e}}^{ - st}}f\\left( t \\right)\\,dt}}}}{{1 - {{\\bf{e}}^{ - sT}}}}$",
+      "$sF\\left( s \\right) - f\\left( 0 \\right)$",
+      "${s^2}F\\left( s \\right) - sf\\left( 0 \\right) - f'\\left( 0 \\right)$",
+      "${s^n}F\\left( s \\right) - {s^{n - 1}}f\\left( 0 \\right) - {s^{n - 2}}f'\\left( 0 \\right) \\cdots - s{f^{\\left( {n - 2} \\right)}}\\left( 0 \\right) - {f^{\\left( {n - 1} \\right)}}\\left( 0 \\right)$"
+    )
+) |>
+  gt() |>
+  fmt_markdown() |>
+  cols_label(
+    idx = "",
+    l_time_domain = md("$f\\left( t \\right) = {\\mathcal{L}^{\\,\\, - 1}}\\left\\{ {F\\left( s \\right)} \\right\\}$"),
+    l_laplace_s_domain = md("$F\\left( s \\right) = \\mathcal{L}\\left\\{ {f\\left( t \\right)} \\right\\}$")
+  ) |>
+  tab_header(title = "Math Rendering") |>
+  tab_source_note(
+    source_note = md("The hyperbolic functions: $\\cosh \\left( t \\right) = \\frac{{{{\\bf{e}}^t} + {{\\bf{e}}^{ - t}}}}{2}$ , $\\sinh \\left( t \\right) = \\frac{{{{\\bf{e}}^t} - {{\\bf{e}}^{ - t}}}}{2}$")
+  ) |>
+  cols_align(align = "center")
+```
+
+::: panel-tabset
+### html
+
+```{r}
+#| echo: false
+tab
+```
+
+### interactive
+
+```{r}
+#| echo: false
+opt_interactive(tab)
+```
+
+### plot
+
+```{r}
+#| echo: false  
+plot(tab)
+```
+:::
+
+
